style(dashboard): more scrollbar style correction

--- a/dashboard/src/filter/filter-settings/filter-settings.css
+++ b/dashboard/src/filter/filter-settings/filter-settings.css
@@ -10,5 +10,5 @@
 }
 .filter-settings-tabs .mantine-Tabs-body {
   flex: 1;
-  overflow: scroll;
+  overflow: auto;
 }
